# quran_persian_chatbot

./: Final (3).ipynb  Preparing_the_database.ipynb  README.md  final_(3).py  preparing_the_database (1).py  pyproject.toml  requirements.txt
src/quran_persian_chatbot/: __init__.py  cli.py  config.py  indexing.py  prompting.py  rag.py
tests/: test_cli.py  test_indexing.py  test_prompting.py
